--- a/www.nass.gov.ng/44efa2798b644b9c66241bb91893fde5b3c9a881.yml
+++ b/www.nass.gov.ng/44efa2798b644b9c66241bb91893fde5b3c9a881.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Mon, 13 Aug 2018 19:25:49 GMT
+    - Wed, 15 Aug 2018 14:30:31 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=bwJikvbr0ca4--c0ND5qh1; path=/
+    - PHPSESSID=j39fKuF8x8r7j%2C6ftwK4b1; path=/
     Content-Type:
     - text/html; charset=UTF-8
     Content-Length:
@@ -36,4 +36,4 @@ response:
   body:
     encoding: UTF-8
   http_version: 
-recorded_at: Mon, 13 Aug 2018 19:25:49 GMT
+recorded_at: Wed, 15 Aug 2018 14:30:31 GMT
