--- a/www.nass.gov.ng/9769dfab9bd854ac2eb12184ddb23755935c46c6.yml
+++ b/www.nass.gov.ng/9769dfab9bd854ac2eb12184ddb23755935c46c6.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Mon, 13 Aug 2018 19:29:19 GMT
+    - Wed, 15 Aug 2018 14:33:59 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=dtREBc%2CpmdOLnDrR9bxEG1; path=/
+    - PHPSESSID=PsZObWJCJZ2oAVEiVY3XJ1; path=/
     Content-Type:
     - text/html; charset=UTF-8
     Content-Length:
@@ -36,4 +36,4 @@ response:
   body:
     encoding: UTF-8
   http_version: 
-recorded_at: Mon, 13 Aug 2018 19:29:19 GMT
+recorded_at: Wed, 15 Aug 2018 14:34:00 GMT
