--- a/www.nass.gov.ng/f864ac18e7ad290de8ea5b5dab688a5556e8b20d.yml
+++ b/www.nass.gov.ng/f864ac18e7ad290de8ea5b5dab688a5556e8b20d.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Mon, 13 Aug 2018 19:47:15 GMT
+    - Wed, 15 Aug 2018 14:52:18 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=inqJjmnY4DBQ03u81PzhV1; path=/
+    - PHPSESSID=cb6-2KJI07%2CnU2y0DL3bL0; path=/
     Content-Type:
     - text/html; charset=UTF-8
     Content-Length:
@@ -36,4 +36,4 @@ response:
   body:
     encoding: UTF-8
   http_version: 
-recorded_at: Mon, 13 Aug 2018 19:47:15 GMT
+recorded_at: Wed, 15 Aug 2018 14:52:18 GMT
