--- a/www.nass.gov.ng/67dd730ff856ea9bb96904fa30ee4e9ee2de60d0.yml
+++ b/www.nass.gov.ng/67dd730ff856ea9bb96904fa30ee4e9ee2de60d0.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Mon, 13 Aug 2018 19:48:44 GMT
+    - Wed, 15 Aug 2018 14:54:06 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=TpOD4tCeBI0icPhLT5sCo3; path=/
+    - PHPSESSID=%2CV-oy471mCze6tacmYeJF0; path=/
     Content-Type:
     - text/html; charset=UTF-8
     Content-Length:
@@ -36,4 +36,4 @@ response:
   body:
     encoding: UTF-8
   http_version: 
-recorded_at: Mon, 13 Aug 2018 19:48:45 GMT
+recorded_at: Wed, 15 Aug 2018 14:54:07 GMT
