--- a/www.nass.gov.ng/9f482ad8a2705cfef53148d781ce821e48e4d450.yml
+++ b/www.nass.gov.ng/9f482ad8a2705cfef53148d781ce821e48e4d450.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Mon, 13 Aug 2018 19:53:40 GMT
+    - Wed, 15 Aug 2018 14:59:33 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=Q1hK%2CAjEl-3uaM2%2CglgCf3; path=/
+    - PHPSESSID=USXyNpI2n4c01FsqN49j20; path=/
     Content-Type:
     - text/html; charset=UTF-8
     Content-Length:
@@ -36,4 +36,4 @@ response:
   body:
     encoding: UTF-8
   http_version: 
-recorded_at: Mon, 13 Aug 2018 19:53:40 GMT
+recorded_at: Wed, 15 Aug 2018 14:59:33 GMT
