--- a/www.nass.gov.ng/98d8562eac6fe344710859413d6c84743377df93.yml
+++ b/www.nass.gov.ng/98d8562eac6fe344710859413d6c84743377df93.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Mon, 13 Aug 2018 19:54:27 GMT
+    - Wed, 15 Aug 2018 15:00:30 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=64rNoWPPLYI1HIWy7hdXn3; path=/
+    - PHPSESSID=%2C3sCi2pnu09HqR-3jEG-H0; path=/
     Content-Type:
     - text/html; charset=UTF-8
     Content-Length:
@@ -36,4 +36,4 @@ response:
   body:
     encoding: UTF-8
   http_version: 
-recorded_at: Mon, 13 Aug 2018 19:54:27 GMT
+recorded_at: Wed, 15 Aug 2018 15:00:30 GMT
