--- a/www.nass.gov.ng/ab67ef4608c719166e2eab4b5ff7c64d0887b3b9.yml
+++ b/www.nass.gov.ng/ab67ef4608c719166e2eab4b5ff7c64d0887b3b9.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Mon, 13 Aug 2018 19:58:26 GMT
+    - Wed, 15 Aug 2018 15:04:07 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=%2CeRTT5PrHujT7fzoM13uy1; path=/
+    - PHPSESSID=6z2VygYf5kDNbL6qxCPqB2; path=/
     Content-Type:
     - text/html; charset=UTF-8
     Content-Length:
@@ -36,4 +36,4 @@ response:
   body:
     encoding: UTF-8
   http_version: 
-recorded_at: Mon, 13 Aug 2018 19:58:26 GMT
+recorded_at: Wed, 15 Aug 2018 15:04:07 GMT
