--- a/www.nass.gov.ng/6289e027e6fa792b81e6659b7ca189c8bd059faa.yml
+++ b/www.nass.gov.ng/6289e027e6fa792b81e6659b7ca189c8bd059faa.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Mon, 13 Aug 2018 20:13:53 GMT
+    - Wed, 15 Aug 2018 15:18:55 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=ZNeThjl%2CsyXF6w-Vljvk90; path=/
+    - PHPSESSID=k6e9xo3Qrsr29Eezxu0NG3; path=/
     Content-Type:
     - text/html; charset=UTF-8
     Content-Length:
@@ -36,4 +36,4 @@ response:
   body:
     encoding: UTF-8
   http_version: 
-recorded_at: Mon, 13 Aug 2018 20:13:53 GMT
+recorded_at: Wed, 15 Aug 2018 15:18:55 GMT
