--- a/www.nass.gov.ng/100f7c561771380aac5a986d9aeba0c830f8bc1d.yml
+++ b/www.nass.gov.ng/100f7c561771380aac5a986d9aeba0c830f8bc1d.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Mon, 13 Aug 2018 20:19:29 GMT
+    - Wed, 15 Aug 2018 15:23:16 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=gWRh%2Cnxtc8TGw3heHpKZC3; path=/
+    - PHPSESSID=GpOzNYJFI%2CRR3zyvvgCcr3; path=/
     Content-Type:
     - text/html; charset=UTF-8
     Content-Length:
@@ -36,4 +36,4 @@ response:
   body:
     encoding: UTF-8
   http_version: 
-recorded_at: Mon, 13 Aug 2018 20:19:30 GMT
+recorded_at: Wed, 15 Aug 2018 15:23:16 GMT
