--- a/www.nass.gov.ng/2e47dd353b090ddc4c77670008278e5d53d86165.yml
+++ b/www.nass.gov.ng/2e47dd353b090ddc4c77670008278e5d53d86165.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Mon, 13 Aug 2018 20:23:24 GMT
+    - Wed, 15 Aug 2018 15:26:47 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=tueYqvJYb%2CTYwOOZYcDHZ2; path=/
+    - PHPSESSID=xqiX8SqIfs0bnfdLfR3t12; path=/
     Content-Type:
     - text/html; charset=UTF-8
     Content-Length:
@@ -36,4 +36,4 @@ response:
   body:
     encoding: UTF-8
   http_version: 
-recorded_at: Mon, 13 Aug 2018 20:23:25 GMT
+recorded_at: Wed, 15 Aug 2018 15:26:47 GMT
