--- a/www.nass.gov.ng/359520d6a7ff076ac099e7cea91f098d7cfb7fa7.yml
+++ b/www.nass.gov.ng/359520d6a7ff076ac099e7cea91f098d7cfb7fa7.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Mon, 13 Aug 2018 20:24:14 GMT
+    - Wed, 15 Aug 2018 15:27:39 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=dIB1ry86e3f1t%2Cf-zny3X3; path=/
+    - PHPSESSID=v2R-kmmMGYABdw6tsqZW91; path=/
     Content-Type:
     - text/html; charset=UTF-8
     Content-Length:
@@ -36,4 +36,4 @@ response:
   body:
     encoding: UTF-8
   http_version: 
-recorded_at: Mon, 13 Aug 2018 20:24:14 GMT
+recorded_at: Wed, 15 Aug 2018 15:27:40 GMT
