--- a/www.nass.gov.ng/cf470a0956aaf0f5752b854ebd2863797a4177a4.yml
+++ b/www.nass.gov.ng/cf470a0956aaf0f5752b854ebd2863797a4177a4.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Mon, 13 Aug 2018 20:27:59 GMT
+    - Wed, 15 Aug 2018 15:30:17 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=c5j97Pdcyj-KigXEpsboB1; path=/
+    - PHPSESSID=v4ad%2Ca46AKEuwnDpHiVe-0; path=/
     Content-Type:
     - text/html; charset=UTF-8
     Content-Length:
@@ -36,4 +36,4 @@ response:
   body:
     encoding: UTF-8
   http_version: 
-recorded_at: Mon, 13 Aug 2018 20:27:59 GMT
+recorded_at: Wed, 15 Aug 2018 15:30:17 GMT
