--- a/www.nass.gov.ng/c6ebac4b01e901d4720c3545d81320e63b7d21a9.yml
+++ b/www.nass.gov.ng/c6ebac4b01e901d4720c3545d81320e63b7d21a9.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Mon, 13 Aug 2018 20:52:19 GMT
+    - Wed, 15 Aug 2018 15:54:12 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=wS%2CDbAY5sgHcetxRi4jWE0; path=/
+    - PHPSESSID=wSrK0IzU6rrdykOmgYj4f2; path=/
     Content-Type:
     - text/html; charset=UTF-8
     Content-Length:
@@ -36,4 +36,4 @@ response:
   body:
     encoding: UTF-8
   http_version: 
-recorded_at: Mon, 13 Aug 2018 20:52:19 GMT
+recorded_at: Wed, 15 Aug 2018 15:54:13 GMT
