--- a/www.nass.gov.ng/b6e07fc93bdafb70a4d56423b7e08125d296dc31.yml
+++ b/www.nass.gov.ng/b6e07fc93bdafb70a4d56423b7e08125d296dc31.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Mon, 13 Aug 2018 21:04:50 GMT
+    - Wed, 15 Aug 2018 16:06:22 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=Xjc7zJQqY3oyhRF8PJuzf2; path=/
+    - PHPSESSID=WNwYbs8ncgYz%2Cujm6fSjQ2; path=/
     Content-Type:
     - text/html; charset=UTF-8
     Content-Length:
@@ -36,4 +36,4 @@ response:
   body:
     encoding: UTF-8
   http_version: 
-recorded_at: Mon, 13 Aug 2018 21:04:50 GMT
+recorded_at: Wed, 15 Aug 2018 16:06:22 GMT
