--- a/www.nass.gov.ng/0006de1dd770145855ac0103be15b104859bda0c.yml
+++ b/www.nass.gov.ng/0006de1dd770145855ac0103be15b104859bda0c.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Mon, 13 Aug 2018 21:05:39 GMT
+    - Wed, 15 Aug 2018 16:07:19 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=B4Zt2oFCZlSCcJcNob5-a2; path=/
+    - PHPSESSID=ksCR%2C2q3zVGnjyoU%2CDOMk3; path=/
     Content-Type:
     - text/html; charset=UTF-8
     Content-Length:
@@ -36,4 +36,4 @@ response:
   body:
     encoding: UTF-8
   http_version: 
-recorded_at: Mon, 13 Aug 2018 21:05:39 GMT
+recorded_at: Wed, 15 Aug 2018 16:07:19 GMT
