--- a/www.nass.gov.ng/968310bd345a54790b8821551330be32e914eb43.yml
+++ b/www.nass.gov.ng/968310bd345a54790b8821551330be32e914eb43.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Mon, 13 Aug 2018 21:22:59 GMT
+    - Wed, 15 Aug 2018 16:22:21 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=V%2C4JjkDvR1UfC%2CmOluGRl2; path=/
+    - PHPSESSID=L56lcTwRaxq4GhRGQLZYP1; path=/
     Content-Type:
     - text/html; charset=UTF-8
     Content-Length:
@@ -36,4 +36,4 @@ response:
   body:
     encoding: UTF-8
   http_version: 
-recorded_at: Mon, 13 Aug 2018 21:22:59 GMT
+recorded_at: Wed, 15 Aug 2018 16:22:22 GMT
