--- a/www.nass.gov.ng/54619da91f49e918d36405986489133b0bdc63e5.yml
+++ b/www.nass.gov.ng/54619da91f49e918d36405986489133b0bdc63e5.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Mon, 13 Aug 2018 21:33:12 GMT
+    - Wed, 15 Aug 2018 16:30:52 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=fdAYCy8SiZsO%2CZOk9D7p42; path=/
+    - PHPSESSID=l%2C5itwINBoDJXbllKABRG0; path=/
     Content-Type:
     - text/html; charset=UTF-8
     Content-Length:
@@ -36,4 +36,4 @@ response:
   body:
     encoding: UTF-8
   http_version: 
-recorded_at: Mon, 13 Aug 2018 21:33:13 GMT
+recorded_at: Wed, 15 Aug 2018 16:30:52 GMT
