--- a/www.nass.gov.ng/9990223a8422d479229a7cd427e76d734882b3a3.yml
+++ b/www.nass.gov.ng/9990223a8422d479229a7cd427e76d734882b3a3.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Mon, 13 Aug 2018 21:40:26 GMT
+    - Wed, 15 Aug 2018 16:37:46 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=UKSOvEBQqyGaD57LpGIp81; path=/
+    - PHPSESSID=fPhuxk5zDlqgzPy3OO%2Cwm3; path=/
     Content-Type:
     - text/html; charset=UTF-8
     Content-Length:
@@ -36,4 +36,4 @@ response:
   body:
     encoding: UTF-8
   http_version: 
-recorded_at: Mon, 13 Aug 2018 21:40:26 GMT
+recorded_at: Wed, 15 Aug 2018 16:37:46 GMT
