--- a/www.nass.gov.ng/ddd97e16ad45970a47517af35ecc0b3bfd8465f6.yml
+++ b/www.nass.gov.ng/ddd97e16ad45970a47517af35ecc0b3bfd8465f6.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Mon, 13 Aug 2018 21:46:26 GMT
+    - Wed, 15 Aug 2018 16:43:34 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=EBSCETPXhYOKLLp1-fV7v1; path=/
+    - PHPSESSID=MLtJzgXM%2CWQtaIdGs-wXo2; path=/
     Content-Type:
     - text/html; charset=UTF-8
     Content-Length:
@@ -36,4 +36,4 @@ response:
   body:
     encoding: UTF-8
   http_version: 
-recorded_at: Mon, 13 Aug 2018 21:46:27 GMT
+recorded_at: Wed, 15 Aug 2018 16:43:34 GMT
