--- a/www.nass.gov.ng/64ffadf45db70b458eedc20c9270f439c23aec1c.yml
+++ b/www.nass.gov.ng/64ffadf45db70b458eedc20c9270f439c23aec1c.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Mon, 13 Aug 2018 21:48:38 GMT
+    - Wed, 15 Aug 2018 16:45:54 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=Q%2CAohkak7dfqhNBSeWHnQ2; path=/
+    - PHPSESSID=8LBsMfmF2bAv2gWddkNAy3; path=/
     Content-Type:
     - text/html; charset=UTF-8
     Content-Length:
@@ -36,4 +36,4 @@ response:
   body:
     encoding: UTF-8
   http_version: 
-recorded_at: Mon, 13 Aug 2018 21:48:38 GMT
+recorded_at: Wed, 15 Aug 2018 16:45:55 GMT
