--- a/www.nass.gov.ng/d50c45832c2d21e004a2f5ecf8edaac5f66fb825.yml
+++ b/www.nass.gov.ng/d50c45832c2d21e004a2f5ecf8edaac5f66fb825.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Mon, 13 Aug 2018 21:50:13 GMT
+    - Wed, 15 Aug 2018 16:47:14 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=lWkP%2CAZg9VL9YnxSfL5Sb2; path=/
+    - PHPSESSID=EviGxeFq754JTwD%2CfHJRL0; path=/
     Content-Type:
     - text/html; charset=UTF-8
     Content-Length:
@@ -36,4 +36,4 @@ response:
   body:
     encoding: UTF-8
   http_version: 
-recorded_at: Mon, 13 Aug 2018 21:50:13 GMT
+recorded_at: Wed, 15 Aug 2018 16:47:14 GMT
