--- a/www.nass.gov.ng/7fe7e8117c6baaea7515876165969ce9d11d96e0.yml
+++ b/www.nass.gov.ng/7fe7e8117c6baaea7515876165969ce9d11d96e0.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Mon, 13 Aug 2018 21:52:48 GMT
+    - Wed, 15 Aug 2018 16:49:52 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=UF6qdWafBjgjqdC7%2CLXJw3; path=/
+    - PHPSESSID=%2CCzEaKM5rIkiHBhhev8Dt0; path=/
     Content-Type:
     - text/html; charset=UTF-8
     Content-Length:
@@ -36,4 +36,4 @@ response:
   body:
     encoding: UTF-8
   http_version: 
-recorded_at: Mon, 13 Aug 2018 21:52:48 GMT
+recorded_at: Wed, 15 Aug 2018 16:49:52 GMT
