--- a/www.nass.gov.ng/40863f4c640d08070ceb73f520c31c1880611bb9.yml
+++ b/www.nass.gov.ng/40863f4c640d08070ceb73f520c31c1880611bb9.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Mon, 13 Aug 2018 21:57:40 GMT
+    - Wed, 15 Aug 2018 16:55:13 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=OT4NSpA6NWOeaYJzlAgV%2C1; path=/
+    - PHPSESSID=JQQSROzgB3QsRT0fv9o3j0; path=/
     Content-Type:
     - text/html; charset=UTF-8
     Content-Length:
@@ -36,4 +36,4 @@ response:
   body:
     encoding: UTF-8
   http_version: 
-recorded_at: Mon, 13 Aug 2018 21:57:40 GMT
+recorded_at: Wed, 15 Aug 2018 16:55:13 GMT
