--- a/www.nass.gov.ng/27ea44199a7fcd5446c89ec1c9a1377231fa4dab.yml
+++ b/www.nass.gov.ng/27ea44199a7fcd5446c89ec1c9a1377231fa4dab.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Mon, 13 Aug 2018 22:00:01 GMT
+    - Wed, 15 Aug 2018 16:57:46 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=%2CaQ4Wo8yQiCb4SEBZAQwR2; path=/
+    - PHPSESSID=cKAoW1vnEAZCWS9ruvn762; path=/
     Content-Type:
     - text/html; charset=UTF-8
     Content-Length:
@@ -36,4 +36,4 @@ response:
   body:
     encoding: UTF-8
   http_version: 
-recorded_at: Mon, 13 Aug 2018 22:00:01 GMT
+recorded_at: Wed, 15 Aug 2018 16:57:46 GMT
