--- a/www.nass.gov.ng/7a9c992de87c92f9d2c8b4b2cadc6f35d09abcdc.yml
+++ b/www.nass.gov.ng/7a9c992de87c92f9d2c8b4b2cadc6f35d09abcdc.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Mon, 13 Aug 2018 22:02:01 GMT
+    - Wed, 15 Aug 2018 16:59:50 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=fSvo4dBlQjVAubJ7EM9DU0; path=/
+    - PHPSESSID=L2GFOHp48gfRhHcUsd%2CCJ1; path=/
     Content-Type:
     - text/html; charset=UTF-8
     Content-Length:
@@ -36,4 +36,4 @@ response:
   body:
     encoding: UTF-8
   http_version: 
-recorded_at: Mon, 13 Aug 2018 22:02:01 GMT
+recorded_at: Wed, 15 Aug 2018 16:59:50 GMT
