--- a/www.nass.gov.ng/32266fcff7048fcefeaa4f634742258dd578ff03.yml
+++ b/www.nass.gov.ng/32266fcff7048fcefeaa4f634742258dd578ff03.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Mon, 13 Aug 2018 22:04:20 GMT
+    - Wed, 15 Aug 2018 17:03:13 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=AHpyGYsfhkhDzh5Fss7j53; path=/
+    - PHPSESSID=zPQx35%2CHQUCOuSHOvYMKp1; path=/
     Content-Type:
     - text/html; charset=UTF-8
     Content-Length:
@@ -36,4 +36,4 @@ response:
   body:
     encoding: UTF-8
   http_version: 
-recorded_at: Mon, 13 Aug 2018 22:04:20 GMT
+recorded_at: Wed, 15 Aug 2018 17:03:14 GMT
