--- a/www.nass.gov.ng/e599b409eaf8300338126082ab2cd44387d77364.yml
+++ b/www.nass.gov.ng/e599b409eaf8300338126082ab2cd44387d77364.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Mon, 13 Aug 2018 22:10:58 GMT
+    - Wed, 15 Aug 2018 17:10:50 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=7lMfdeQrxDKcNG1SD%2CtH22; path=/
+    - PHPSESSID=w8Xw3uto%2CLd5jT-2bKcTW3; path=/
     Content-Type:
     - text/html; charset=UTF-8
     Content-Length:
@@ -36,4 +36,4 @@ response:
   body:
     encoding: UTF-8
   http_version: 
-recorded_at: Mon, 13 Aug 2018 22:10:58 GMT
+recorded_at: Wed, 15 Aug 2018 17:10:50 GMT
