--- a/www.nass.gov.ng/d2af98f869de32b131eb2c94035ebd4014fff26c.yml
+++ b/www.nass.gov.ng/d2af98f869de32b131eb2c94035ebd4014fff26c.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Mon, 13 Aug 2018 22:16:04 GMT
+    - Wed, 15 Aug 2018 17:16:38 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=T7efbEy0gOLNPchZQkZy-2; path=/
+    - PHPSESSID=hWMrXeFplUJA67NU1b1h%2C0; path=/
     Content-Type:
     - text/html; charset=UTF-8
     Content-Length:
@@ -36,4 +36,4 @@ response:
   body:
     encoding: UTF-8
   http_version: 
-recorded_at: Mon, 13 Aug 2018 22:16:04 GMT
+recorded_at: Wed, 15 Aug 2018 17:16:51 GMT
