--- a/www.nass.gov.ng/22f526c91bcf21a1b18497a7e9ffe2489f3b25fa.yml
+++ b/www.nass.gov.ng/22f526c91bcf21a1b18497a7e9ffe2489f3b25fa.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Mon, 13 Aug 2018 22:18:44 GMT
+    - Wed, 15 Aug 2018 17:22:52 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=fa8XSuk-nHQjUzc3VcC7J3; path=/
+    - PHPSESSID=gYj89eKXC8Mdqm7cwX75%2C0; path=/
     Content-Type:
     - text/html; charset=UTF-8
     Content-Length:
@@ -36,4 +36,4 @@ response:
   body:
     encoding: UTF-8
   http_version: 
-recorded_at: Mon, 13 Aug 2018 22:18:45 GMT
+recorded_at: Wed, 15 Aug 2018 17:22:54 GMT
