--- a/www.nass.gov.ng/26e59e72a1af369e7c4d34a141fd6eeb20e026fc.yml
+++ b/www.nass.gov.ng/26e59e72a1af369e7c4d34a141fd6eeb20e026fc.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Mon, 13 Aug 2018 22:25:21 GMT
+    - Wed, 15 Aug 2018 17:32:57 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=epzaUjAO9u8yISpksVrQP0; path=/
+    - PHPSESSID=m%2CtHpoSeR0dNpoe7iOR4R3; path=/
     Content-Type:
     - text/html; charset=UTF-8
     Content-Length:
@@ -36,4 +36,4 @@ response:
   body:
     encoding: UTF-8
   http_version: 
-recorded_at: Mon, 13 Aug 2018 22:25:21 GMT
+recorded_at: Wed, 15 Aug 2018 17:32:57 GMT
