--- a/www.nass.gov.ng/78afc8f3702290f20157b26c0888531e810819e3.yml
+++ b/www.nass.gov.ng/78afc8f3702290f20157b26c0888531e810819e3.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Mon, 13 Aug 2018 22:28:38 GMT
+    - Wed, 15 Aug 2018 17:36:54 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=%2CZaXnSKp9JCXoff5UqR791; path=/
+    - PHPSESSID=wBcjuDSDM7cELHmuWjUnW0; path=/
     Content-Type:
     - text/html; charset=UTF-8
     Content-Length:
@@ -36,4 +36,4 @@ response:
   body:
     encoding: UTF-8
   http_version: 
-recorded_at: Mon, 13 Aug 2018 22:28:38 GMT
+recorded_at: Wed, 15 Aug 2018 17:36:54 GMT
