--- a/www.nass.gov.ng/3302396405cf4ed208cb6255e0dc0f70094097a9.yml
+++ b/www.nass.gov.ng/3302396405cf4ed208cb6255e0dc0f70094097a9.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Mon, 13 Aug 2018 22:35:52 GMT
+    - Wed, 15 Aug 2018 17:42:51 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=dnMeX6GXsW9K2Ej08HJDX0; path=/
+    - PHPSESSID=shhTq6Y-%2Cu0wyaC%2CBrJPk2; path=/
     Content-Type:
     - text/html; charset=UTF-8
     Content-Length:
@@ -36,4 +36,4 @@ response:
   body:
     encoding: UTF-8
   http_version: 
-recorded_at: Mon, 13 Aug 2018 22:35:52 GMT
+recorded_at: Wed, 15 Aug 2018 17:42:51 GMT
