--- a/www.nass.gov.ng/3603b0230117e06fc37e8509eda0c11f5a2432ff.yml
+++ b/www.nass.gov.ng/3603b0230117e06fc37e8509eda0c11f5a2432ff.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Mon, 13 Aug 2018 22:43:45 GMT
+    - Wed, 15 Aug 2018 17:50:11 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=ATt%2CY2irXmQxSn0rI4PIV0; path=/
+    - PHPSESSID=qjd7Dofovjx53hk9oV%2Cmu1; path=/
     Content-Type:
     - text/html; charset=UTF-8
     Content-Length:
@@ -36,4 +36,4 @@ response:
   body:
     encoding: UTF-8
   http_version: 
-recorded_at: Mon, 13 Aug 2018 22:43:45 GMT
+recorded_at: Wed, 15 Aug 2018 17:50:11 GMT
