--- a/www.nass.gov.ng/093b7f126b4a96f5962e7059082fbe8fdbbdb704.yml
+++ b/www.nass.gov.ng/093b7f126b4a96f5962e7059082fbe8fdbbdb704.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Mon, 13 Aug 2018 22:48:46 GMT
+    - Wed, 15 Aug 2018 17:53:55 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=cTgsmwuzxHvf7Zf15MzqO3; path=/
+    - PHPSESSID=kkL5cKqMn0xJ0v4pWivA%2C2; path=/
     Content-Type:
     - text/html; charset=UTF-8
     Content-Length:
@@ -36,4 +36,4 @@ response:
   body:
     encoding: UTF-8
   http_version: 
-recorded_at: Mon, 13 Aug 2018 22:48:46 GMT
+recorded_at: Wed, 15 Aug 2018 17:53:55 GMT
