--- a/www.nass.gov.ng/656fd33ac815dfa93a03a0d4478fe12103a58bc4.yml
+++ b/www.nass.gov.ng/656fd33ac815dfa93a03a0d4478fe12103a58bc4.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Mon, 13 Aug 2018 22:50:26 GMT
+    - Wed, 15 Aug 2018 17:55:42 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=rhHeNRfl7zU%2CLWAx75hTL0; path=/
+    - PHPSESSID=3z027oIzXSHnPgUDSFERD1; path=/
     Content-Type:
     - text/html; charset=UTF-8
     Content-Length:
@@ -36,4 +36,4 @@ response:
   body:
     encoding: UTF-8
   http_version: 
-recorded_at: Mon, 13 Aug 2018 22:50:26 GMT
+recorded_at: Wed, 15 Aug 2018 17:55:47 GMT
