--- a/www.nass.gov.ng/29d43b5bc0ecc4a7b466cadf645b35e7ef7153b9.yml
+++ b/www.nass.gov.ng/29d43b5bc0ecc4a7b466cadf645b35e7ef7153b9.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Mon, 13 Aug 2018 22:54:35 GMT
+    - Wed, 15 Aug 2018 17:59:50 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=IA8xkwjFbV2RIB%2CFnNvW52; path=/
+    - PHPSESSID=FzaThf1UrhFaEGTOIXsHH1; path=/
     Content-Type:
     - text/html; charset=UTF-8
     Content-Length:
@@ -36,4 +36,4 @@ response:
   body:
     encoding: UTF-8
   http_version: 
-recorded_at: Mon, 13 Aug 2018 22:54:35 GMT
+recorded_at: Wed, 15 Aug 2018 17:59:50 GMT
