--- a/www.nass.gov.ng/93b6c65363f8309a306a5e422bda9d70074a53a1.yml
+++ b/www.nass.gov.ng/93b6c65363f8309a306a5e422bda9d70074a53a1.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Mon, 13 Aug 2018 22:55:39 GMT
+    - Wed, 15 Aug 2018 18:00:48 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=z2cZUoC801c44fzDXZlcP2; path=/
+    - PHPSESSID=TrEYzWK%2CLgNtUwpsXABbt1; path=/
     Content-Type:
     - text/html; charset=UTF-8
     Content-Length:
@@ -36,4 +36,4 @@ response:
   body:
     encoding: UTF-8
   http_version: 
-recorded_at: Mon, 13 Aug 2018 22:55:39 GMT
+recorded_at: Wed, 15 Aug 2018 18:00:48 GMT
